# alive_artform

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  constants.h  event_handlers.cpp  event_handlers.h  event_handlers.hpp  globals.h  globals.hpp  main.cpp  meson.build  physics.cpp  physics.h  physics.hpp  string_manipulation.cpp  string_manipulation.h  string_manipulation.hpp  thread.cpp
include/sdl2_2.30.12/: install.json
original/: constants.cpp  init_sdl.cpp  og_wow.cpp  thread.cpp
scripts/: embed_resource.py
src/: constants.hpp  event_handlers.cpp  event_handlers.hpp  globals.hpp  main.cpp  meson.build  physics.cpp  physics.hpp  string_manipulation.cpp  string_manipulation.hpp
